test/corpus/main.txt
================
Main program
================

.main
DUP
.end-main

---
(source_file
    (main_program
        (single_statement)))


================
Main program with variables
================

.main
.var
myvar
.end-var
DUP
.end-main

---
(source_file
    (main_program
        (variables
            (identifier))
            (single_statement)))
